# s1aux

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  Makefile  NEWS.rst  README.rst  pyproject.toml  requirements-lint.txt  requirements-test.txt  tox.ini
.github/workflows/: ci.yml  lint.yml
s1aux/: __init__.py  _core.py
s1aux/parse/: __init__.py  ins.py
s1aux/parse/v1_05/: __init__.py
s1aux/parse/v1_06/: itc.py
s1aux/parse/v1_5/: itc.py  scf.py
s1aux/parse/v1_6/: __init__.py  s1_object_types.py
s1aux/parse/v2_10/: __init__.py  cal.py  ins.py  pp1.py  pp2.py  s1_object_types.py
s1aux/parse/v3_03/: pp1.py  pp2.py  s1_object_types.py
s1aux/parse/v3_07/: ins.py  pp1.py  s1_object_types.py
s1aux/parse/v3_08/: pp2.py  s1_object_types.py
s1aux/parse/v3_09/: __init__.py  pp2.py
s1aux/parse/v3_12/: __init__.py  pp1.py  s1_object_types.py
s1aux/parse/v3_3/: __init__.py  ins.py  pp2.py  s1_object_types.py
s1aux/parse/v3_7/: __init__.py
s1aux/parse/v3_8/: __init__.py  pp2.py
s1aux/parse/v3_9/: pp2.py
tests/: test_parse.py
tests/data/: LICENSE.txt
tests/data/v2.10/S1A_AUX_INS_V20140915T100000_G20150319T102820.SAFE/data/: s1a-aux-ins.xml
tests/data/v2.10/S1A_AUX_PP1_V20140915T100000_G20150319T103002.SAFE/data/: s1a-aux-pp1.xml
tests/data/v3.03/S1B_AUX_INS_V20160422T000000_G20180313T094010.SAFE/data/: s1b-aux-ins.xml
tests/data/v3.03/S1B_AUX_PP1_V20160422T000000_G20180313T093244.SAFE/data/: s1b-aux-pp1.xml
tests/data/v3.07/S1B_AUX_PP1_V20160422T000000_G20211027T133747.SAFE/data/: s1b-aux-pp1.xml
tests/data/v3.12/S1B_AUX_PP1_V20160422T000000_G20240423T074411.SAFE/data/: s1b-aux-pp1.xml
tools/: .xsdata.xml  codegen.py
