[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "s1aux"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "Tools and utilities for Sentinel-1 auxiliary products."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
keywords = ["satellite", "sentinel-1", "esa"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    'xsdata',
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/avalentino/s1aux"
Documentation = "https://github.com/avalentino/s1aux/blob/main/README.rst"
Repository = "https://github.com/avalentino/s1aux.git"
Changelog = "https://github.com/avalentino/s1aux/blob/main/NEWS.rst"
Issues = "https://github.com/avalentino/s1aux/issues"


[tool.setuptools]
packages = ["s1aux"]


[tool.setuptools.dynamic]
version = {attr = "s1aux.__version__"}


[tool.black]
line-length = 79
# target-version = ['py311']
extend-exclude = "s1aux/parse/*"


[tool.isort]
profile = "black"
length_sort = true
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79
skip_glob = ["s1aux/parse/*"]


[tool.ruff]
line-length = 79
# indent-width = 4
# target-version = "py39"
extend-exclude = ["s1aux/parse/*"]


[tool.ruff.lint]
select = [
    "E",    # E/W pycodestyle
    "W",    # E/W pycodestyle
    "F",    # F Pyflakes
    "D",    # D pydocstyle
    "N",    # N pep8-naming
    # "I",    # I isort
    "B",    # B flake8-bugbear
    "C90",  # C90 mccabe
    "UP",   #  UP pyupgrade
    "YTT",  # YTT flake8-2020
    # "ANN",  # ANN flake8-annotations
            #ASYNC flake8-async
            #TRIO flake8-trio
    # "S",    #   S flake8-bandit
    "BLE",  # BLE flake8-blind-except
    # "FBT",  # FBT flake8-boolean-trap
    "A",    #   A flake8-builtins
    # "COM",  # COM flake8-commas
            # CPY flake8-copyright
    "C4",   #  C4 flake8-comprehensions
    "DTZ",  # DTZ flake8-datetimez
            # T10 flake8-debugger
            #  DJ flake8-django
    # "EM",   #  EM flake8-errmsg
    "EXE",  # EXE flake8-executable
    # "FA",   #  FA flake8-future-annotations
    "ISC",  # ISC flake8-implicit-str-concat
    "ICN",  # ICN flake8-import-conventions
    "G",    #   G flake8-logging-format
    "INP",  # INP flake8-no-pep420
            # PIE flake8-pie
    "T20",  # T20 flake8-print
            # PYI flake8-pyi
    # "PT",   #  PT flake8-pytest-style
    "Q",    #   Q flake8-quotes
    "RSE",  # RSE flake8-raise
    "RET",  # RET flake8-return
    # "SLF",  # SLF flake8-self
            #SLOT flake8-slots
            # SIM flake8-simplify
            # TID flake8-tidy-imports
            # TCH flake8-type-checking
            # INT flake8-gettext
    # "ARG",  # ARG flake8-unused-arguments
    # "PTH",  # PTH flake8-use-pathlib
            #  TD flake8-todos
            # FIX flake8-fixme
            # ERA eradicate
            #  PD pandas-vet
            # PGH pygrep-hooks
    # "PL",   #  PL Pylint
            # TRY tryceratops
            # FLY flynt
    "NPY",  # NPY NumPy-specific rules
            # AIR Airflow
            #PERF Perflint
            #FURB refurb
            # LOG flake8-logging
            # RUF Ruff-specific rules
]
extend-ignore = [
    "D105",     # D105 Missing docstring in magic method
    "D107",     # D107 Missing docstring in `__init__`
    "D203",     # D203 1 blank line required before class docstring
    "D213",     # D213 Multi-line docstring summary should start at the second line
    "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
    "PLR0913",  # PLR0913 Too many arguments in function definition
    "RET504",   # RET504 Unnecessary assignment before `return` statement
    "RET505",   # RET505 Unnecessary `elif` after `return` statement
]


[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D"]


[tool.ruff.lint.isort]
length-sort = true
